--- a/.github/workflows/spring_app_azure_deploy.yml
+++ b/.github/workflows/spring_app_azure_deploy.yml
@@ -58,8 +58,8 @@ jobs:
         with:
           command: |
             cd action/
-            source /etc/environment
-            java -jar java-app.war
+            source /etc/environment 
+            java -jar java-app.war &
           host: ${{ secrets.HOST }}
           user: ${{ secrets.SSH_USER }}
           pass: ${{ secrets.SSH_PASSWORD }}
