--- a/.github/workflows/spring_app_azure_deploy.yml
+++ b/.github/workflows/spring_app_azure_deploy.yml
@@ -1,66 +1,66 @@
-name: Build and deploy WAR app to Azure VM :)
-
-env:
-  JAVA_VERSION: '17'
-  SQL_CONSTR: ${{ secrets.DB_CONNECT }}
-  JAVA_APP: "lab6.war"
-
-on:
-  push:
-    branches: [ "master" ]
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Java version ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v3
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'oracle'
-
-
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.war'
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: java-app
-          path: workdir
-
-      - name: Deploy the package to the remote server
-        uses: garygrossgarten/github-action-scp@release
-        with:
-          local: workdir/${{ env.JAVA_APP }}
-          remote: action/java-app.war
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
-
-      - name: Run a script on remote server (start the application)
-        uses: fifsky/ssh-action@master
-        with:
-          command: |
-            cd action/
-            source /etc/environment
-            java -jar java-app.war &
-          host: ${{ secrets.HOST }}
-          user: ${{ secrets.SSH_USER }}
-          pass: ${{ secrets.SSH_PASSWORD }}
-          args: "-tt"
+#name: Build and deploy WAR app to Azure VM :)
+#
+#env:
+#  JAVA_VERSION: '17'
+#  SQL_CONSTR: ${{ secrets.DB_CONNECT }}
+#  JAVA_APP: "lab6.war"
+#
+#on:
+#  push:
+#    branches: [ "master" ]
+#  workflow_dispatch:
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Set up Java version ${{ env.JAVA_VERSION }}
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: ${{ env.JAVA_VERSION }}
+#          distribution: 'oracle'
+#
+#
+#      - name: Build with Maven
+#        run: mvn clean install
+#
+#      - name: Upload artifact for deployment job
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: java-app
+#          path: '${{ github.workspace }}/target/*.war'
+#
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: build
+#
+#    steps:
+#      - name: Download artifact from build job
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: java-app
+#          path: workdir
+#
+#      - name: Deploy the package to the remote server
+#        uses: garygrossgarten/github-action-scp@release
+#        with:
+#          local: workdir/${{ env.JAVA_APP }}
+#          remote: action/java-app.war
+#          host: ${{ secrets.HOST }}
+#          username: ${{ secrets.SSH_USER }}
+#          password: ${{ secrets.SSH_PASSWORD }}
+#
+#      - name: Run a script on remote server (start the application)
+#        uses: fifsky/ssh-action@master
+#        with:
+#          command: |
+#            cd action/
+#            source /etc/environment
+#            java -jar java-app.war &
+#          host: ${{ secrets.HOST }}
+#          user: ${{ secrets.SSH_USER }}
+#          pass: ${{ secrets.SSH_PASSWORD }}
+#          args: "-tt"
