resolved an error

--- a/.github/workflows/docker_azure_deploy.yml
+++ b/.github/workflows/docker_azure_deploy.yml
@@ -13,16 +13,17 @@ jobs:
       SQL_CONSTR: ${{ secrets.DB_CONNECT }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      JAVA_VERSION: '17'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - name: Set up Java version ${{ env.JAVA_VERSION }}
+        uses: actions/setup-java@v3
         with:
-          distribution: 'oracle'
-          java-version: '17'
+            java-version: ${{ env.JAVA_VERSION }}
+            distribution: 'zulu'
 
       - name: Build WAR file
         run: mvn clean install
